# compvision

./: .gitignore  fully_automatic_method_for_segmentation_of_soccer_playing_fields.txt  main.py  new_method.py  pyproject.toml
