[project]
name = "compvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy-stubs==1.16.2.0",
    "scipy>=1.16.2",
    "matplotlib>=3.10.6",
]
